2007-03-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/type_indexededgelist.c (igraph_add_edges) : make sure that
	for undirected graphs the smaller node id is in 'from'

	* src/adjlist.c (igraph_i_adjlist_sort)
	(igraph_i_lazy_adjlist_get_real) : updated to take advantage of 
	the sorted neighbor lists

	* src/vector.c (igraph_vector_binsearch2) : added
	* src/topology.c (igraph_isomorphism_vf2) : updated to use binsearch2

	* src/vector.c (igraph_vector_order, igraph_vector_order1) : two vectors 
	can be supplied now as the basis of the ranking, 
	old version renamed to igraph_vector_order1
	* src/measure_dynamics.c (igraph_measure_dynamics_d_d)
	(igraph_measure_dynamics_d_d_st)
	* src/structural_properties.c (igraph_transitivity_avglocal_undirected)
	(igraph_transitivity_local_undirected2)
	(igraph_transitivity_local_undirected4)
	(igraph_transitivity_undirected)
	* src/type_indexededgelist.c (igraph_add_edges, igraph_delete_edges)
	(igraph_delete_vertices) : updated
	
	* examples/simple/vector.c

	* src/topology.c (igraph_isomorphic_vf2) : modified to use 
	sorted adjacency lists

	* src/foreign.c (igraph_read_graph_graphdb) : added

	* src/adjlist.c (igraph_i_lazy_adjlist_get_real) 
	* src/igraph.h (igraph_i_lazy_adjlist_simplify_t) : SORT option added

	* src/topology.c (igraph_isomorphic_vf2) : heuristics added

	* src/vector.c (igraph_vector_contains) : added
	
	* src/vector.c (igraph_vector_search) : added const to vector argument
	
2007-03-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isomorphic_vf2) : added

2007-03-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/evolver.c (igraph_evolver_d, igraph_evolver_mes_d)
	(igraph_evolver_st_d, igraph_evolver_exp_d, igraph_evolver_ad)
	(igraph_evolver_mes_ad, igraph_evolver_st_ad, igraph_evolver_exp_ad) :
	added

2007-03-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/measure_dynamics.c (igraph_measure_dynamics_id_expected2) : added

	* src/matrix.c (igraph_matrix_sum) : added
