@@ -669,18 +669,54 @@ int igraph_neighbors(const igraph_t *graph, igraph_vector_t *neis, igraph_intege
   
   IGRAPH_CHECK(igraph_vector_resize(neis, length));
   
-  if (mode & IGRAPH_OUT) {
-    j=VECTOR(graph->os)[node+1];
-    for (i=VECTOR(graph->os)[node]; i<j; i++) {
-      VECTOR(*neis)[idx++] = 
-	VECTOR(graph->to)[ (long int)VECTOR(graph->oi)[i] ];
+  if (!igraph_is_directed(graph) || mode != IGRAPH_ALL) {
+
+    if (mode & IGRAPH_OUT) {
+      j=VECTOR(graph->os)[node+1];
+      for (i=VECTOR(graph->os)[node]; i<j; i++) {
+	VECTOR(*neis)[idx++] = 
+	  VECTOR(graph->to)[ (long int)VECTOR(graph->oi)[i] ];
+      }
     }
-  }
-  if (mode & IGRAPH_IN) {
-    j=VECTOR(graph->is)[node+1];
-    for (i=VECTOR(graph->is)[node]; i<j; i++) {
-      VECTOR(*neis)[idx++] =
-	VECTOR(graph->from)[ (long int)VECTOR(graph->ii)[i] ];
+    if (mode & IGRAPH_IN) {
+      j=VECTOR(graph->is)[node+1];
+      for (i=VECTOR(graph->is)[node]; i<j; i++) {
+	VECTOR(*neis)[idx++] =
+	  VECTOR(graph->from)[ (long int)VECTOR(graph->ii)[i] ];
+      }
+    }
+  } else {
+    /* both in- and out- neighbors in a directed graph,
+       we need to merge the two 'vectors' */
+    long int j1=VECTOR(graph->os)[node+1];
+    long int j2=VECTOR(graph->is)[node+1];
+    long int i1=VECTOR(graph->os)[node];
+    long int i2=VECTOR(graph->is)[node];
+    while (i1 < j1 && i2 < j2) {
+      long int n1=VECTOR(graph->to)[ (long int)VECTOR(graph->oi)[i1] ];
+      long int n2=VECTOR(graph->from)[ (long int)VECTOR(graph->ii)[i2] ];
+      if (n1<n2) {
+	VECTOR(*neis)[idx++]=n1;
+	i1++;
+      } else if (n1>n2) {
+	VECTOR(*neis)[idx++]=n2;
+	i2++;
+      } else {
+	VECTOR(*neis)[idx++]=n1;
+	VECTOR(*neis)[idx++]=n2;
+	i1++;
+	i2++;
+      }
+    }
+    while (i1 < j1) {
+      long int n1=VECTOR(graph->to)[ (long int)VECTOR(graph->oi)[i1] ];
+      VECTOR(*neis)[idx++]=n1;
+      i1++;
+    }
+    while (i2 < j2) {
+      long int n2=VECTOR(graph->from)[ (long int)VECTOR(graph->ii)[i2] ];
+      VECTOR(*neis)[idx++]=n2;
+      i2++;
     }
   }
 
